--- a/package.json
+++ b/package.json
@@ -3,15 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
+    "@deepgram/sdk": "^3.3.1",
+    "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/control_utils": "^0.6.1675466023",
+    "@mediapipe/drawing_utils": "^0.3.1675466124",
+    "@mediapipe/hands": "^0.4.1675469240",
+    "@techstark/opencv-js": "^4.6.0-release.1",
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow/tfjs": "^3.21.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/file-saver": "^2.0.7",
+    "comlink": "^4.4.1",
+    "dotenv": "^16.4.5",
+    "file-saver": "^2.0.5",
     "firebase": "^9.9.4",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "lamejs": "^1.2.1",
+    "lodash": "^4.17.21",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-media-recorder": "^1.6.6",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-speech-recognition": "^3.10.0",
+    "react-use-clipboard": "^1.0.9",
+    "react-webcam": "^7.2.0",
+    "recordrtc": "^5.6.2",
     "sass": "^1.54.8",
+    "screen-recording": "^1.0.5",
+    "simple-tts-mp3": "^1.1.0",
+    "textgears-api": "^1.1.11",
+    "tfjs": "^0.6.0",
+    "use-screen-recording": "^2.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
@@ -38,5 +62,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.17.1",
+    "@types/react-speech-recognition": "^3.9.5",
+    "@types/recordrtc": "^5.6.14"
   }
 }
