--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/file-saver": "^2.0.7",
     "axios": "^1.7.6",
+    "caniuse-lite": "^1.0.30001655",
     "comlink": "^4.4.1",
     "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
@@ -67,6 +68,7 @@
   "devDependencies": {
     "@types/lodash": "^4.17.1",
     "@types/react-speech-recognition": "^3.9.5",
-    "@types/recordrtc": "^5.6.14"
+    "@types/recordrtc": "^5.6.14",
+    "typescript": "^5.5.4"
   }
 }
